--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.16.1",
+    "@vercel/postgres": "^0.9.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "8.0.0"
+    "react-markdown": "8.0.0",
+    "vercel": "^34.2.8"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "prisma": "^5.16.1",
     "typescript": "4.5.5"
   }
 }
