--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.16.1",
     "@vercel/postgres": "^0.9.0",
-    "next": "12.0.10",
+    "dotenv": "^16.4.5",
+    "next": "^12.2.5",
+    "next-auth": "^4.24.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.0",
